fix selector to hide overflow items in list

--- a/src/app/public/create-suitcase/create-suitcase.component.scss
+++ b/src/app/public/create-suitcase/create-suitcase.component.scss
@@ -20,7 +20,7 @@ $margin: 15px;
     order: 1;
     height: fit-content;
 
-    .suggestion-body {
+    .suggestion-card-body {
       max-height: 450px;
       overflow-y: scroll;
     }
